--- a/index.html
+++ b/index.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload and Display Text</title>
+  <meta charset="UTF-8">
+  <title>Main Window - Webcam Stream</title>
 </head>
 <body>
-    <h2>Upload an Image</h2>
-    <form method="get">
-        <h1 id="data">Text</h1>
-        <input type="text" name="text" id="text">
-        <input type="submit" onclick="submit()">
-    </form>
+  <h2>Main Window</h2>
+  <video id="video" width="100%" height="300" autoplay muted></video>
 
+  <h2>Viewer Window (iframe)</h2>
+  <iframe id="viewerIframe" src="viewer.html" width="100%" height="300"></iframe>
 
-    <script>
-    function submit(){
-    	document.getElementById('data').textContent = document.getElementById('text').value;
+  <script>
+    let stream;
+
+    async function startStream() {
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
+        document.getElementById("video").srcObject = stream;
+
+        const iframe = document.getElementById("viewerIframe");
+
+        iframe.onload = () => {
+          const trySetStream = () => {
+            const remoteVideo = iframe.contentWindow.document.getElementById("remoteVideo");
+            if (remoteVideo) {
+              remoteVideo.srcObject = stream;
+            } else {
+              // Retry if remoteVideo isn't loaded yet
+              setTimeout(trySetStream, 100);
+            }
+          };
+          trySetStream();
+        };
+      } catch (e) {
+        console.error("Error accessing webcam:", e);
+      }
     }
-    </script>
-    <?php
-        $text = $_get["text"];
-        echo "";
-    ?>
+
+    startStream();
+  </script>
 </body>
 </html>
